fixed layout bug in toolbar header css

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -175,6 +175,7 @@ a {
 	text-transform: uppercase;
 	padding-top: 12px;
 	padding-bottom: 4px;
+	display: block;
 }
 
 .trpRightPanel {
